# cNotes

./: CMakeLists.txt  main.c  practice.c
Basics/: array_manager.c  fibonacci.c  matrix_addition.c  matrix_multiplication.c  matrix_transpose.c  swapping.c
Binary Tree/: binarySearchTree.c  binaryTree.c  order.c
Dynamic Memory Allocation/: matrix_multiplication_using_malloc.c  memory_allocation-01.c  memory_allocation-02.c
Dynmaic Memory Allocation/: memory_allocation-04.c
Linked List/: CreationAndTraversal.c  circularLinkedList.c  cursorBasedImplementation.c  doublyLinkedList.c  doublyLinkedListDeletion.c  doublyLinkedListInsertion.c  singlyLinkedList.c  singlyLinkedListDeletion.c  singlyLinkedListInsertion.c
Queue/: circularQueue.c  queue.c
Sparse Matrix/: sparseMatrix.c
Stack/: stack_using_array.c
Structures/: structures-01.c  structures-02.c  structures-03.c  structures-04.c  structures-05.c  structures-06.c
